2007-04-22 Andrea Zagli <azagli@inwind.it>

	* src/rptcommon.h:
	* src/rptcommon.c: changed rpt_common_convert_to_str_color()'s name in
	rpt_common_rptcolor_to_string()
	added function rpt_common_styke_to_array()
	* src/rptcommon.h:
	* src/rptcommon.c:
	* src/rptprint.c:
	* src/rptreport.c: managed attributes *-style

2007-04-15 Andrea Zagli <azagli@inwind.it>

	* src/rptreport.c:
	* src/rptprint.c: managed page's margins
	* src/reptool_marshal.list:
	* src/rtpmarshal.*: added
	* src/rptreport.c: added signal "field-request"

2007-04-14 Andrea Zagli <azagli@inwind.it>

	* src/*.c: API documentation
	* src/rptobjtext.c: added text's attributes padding*
	* src/rptprint.c: managed text's attributes padding*
	* src/rptreport.c: static text in text's source attribute must be enclosed
	into "" (xml entity &quot;);
	added page's attributes margin*

2007-04-13 Andrea Zagli <azagli@inwind.it>

	* src/Makefile.am: added -no-undefined
	* tests/test_rptreport_creation.c: added report creation test
	* src/rptreport.c: changed rpt_report_add_object_to_section()'s prototype
	* src/rptcommon.c: bugfix on rpt_common_convert_to_str_color

2007-04-08 Andrea Zagli <azagli@inwind.it>

	* src/rptreport.h:
	* src/rptreport.c: added body's property new-page-after;
	added report header's property new-page-after;
	added report footer's property new-page-before;
	added page header/footer's properties first-page and last-page

2007-04-07 Andrea Zagli <azagli@inwind.it>

	* Some general code adjustments and refactorings
	* src/rptprint.c:
	* src/rptobjtext.c: added text's property background-color

2007-04-04 Andrea Zagli <azagli@inwind.it>

	* src/rptreport.h:
	* src/rptreport.c: added rpt_report_set_database(), rpt_report_set_section_height(),
	rpt_report_set_page_size()
	* src/rptreport.c: changed rpt_report_object_is_in_section()'s prototype;
	added special source's text objects values @Date and @Time

2007-04-02 Andrea Zagli <azagli@inwind.it>

	* src/rptreport.h: