@@ -14,7 +14,7 @@
 			<text name="rephead" x="10" y="10" width="300" height="70" font-name="Verdana" font-size="16" font-bold="y" font-underline="y" font-color="#0000FF" source="&quot;the report's header&quot;" />
 		</report-header>
 		<page-header height="80" first-page="y">
-			<text name="title" x="10" y="10" width="300" height="50" font-name="Courier New" font-size="10" font-bold="y" source="&quot;the page's title&quot;" />
+			<text name="title" x="10" y="10" width="300" height="50" font-name="Courier New" font-size="10" font-bold="y" source="&quot;the page's title&quot; &amp; &quot; - &quot; &amp; @Page" />
 			<line name="line1" x="10" y="65" width="500" height="0" />
 		</page-header>
 		<body height="200">
@@ -33,7 +33,7 @@
 			<line name="line2" x="10" y="10" width="500" height="0" />
 			<text name="footer" x="10" y="20" width="300" height="50" source="&quot;the page's footer&quot;" />
 			<ellipse name="ellipse1" x="400" y="50" width="20" height="10" stroke-color="#FF0000" fill-color="#00FF00" />
-			<text name="page_n" x="500" y="20" width="30" height="50" source="@Page" />
+			<text name="page_n" x="500" y="20" width="50" height="50" source="@Page &amp; &quot;/&quot; &amp; @Pages" />
 		</page-footer>
 	</report>
 </reptool>
